infra/ingress-nginx-lbip-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  loadBalancerIP: 192.168.0.110
